@startuml
' Biểu đồ quan hệ giữa các POJO (Model)
skinparam linetype ortho
left to right direction

class Customer
class Order
class OrderItem
class OrderEvent
class Product
class Supplier
class SupplierProductPrice
class Store
class FinanceReport
class PointsLedger
class User

Order *-- OrderItem : chứa dòng hàng
Order --> Customer : "thuộc khách"
Order --> Store : "thuộc cửa hàng"
Order --> OrderEvent : lifecycle
OrderItem --> Product : tham chiếu SKU

SupplierProductPrice --> Supplier : báo giá bởi
SupplierProductPrice --> Product : báo giá cho
Product --> Supplier : nhà cung cấp chính

FinanceReport --> Store : báo cáo theo cửa hàng
PointsLedger --> Customer : cộng/trừ điểm
User --> Store : gán vào cửa hàng

@enduml
